clipping issues need to be fixed.

--- a/style.css
+++ b/style.css
@@ -5,11 +5,12 @@
 }
 
 #myCanvas {
-    width: 1200px;
-    height:800px;
+    width: 1000px;
+    height:600px;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    border: 1px solid #63fdd8;
 }
 
 div {
